<resources>
    <string name="app_name">HIchaT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintUsername">请输入昵称</string>
    <string name="hintUserID">请输入ID</string>
    <string name="hintPassword">请输入密码</string>
    <string name="buttontextLogIn">登录</string>
    <string name="buttontextSignUp">还没有账号，先去注册 </string>
    <string name="hintPassword2">请再次输入密码</string>
    <string name="buttontextSignUp2">注册</string>
    <string name="buttontextLogIn2">返回登录</string>
    <string name="head_portrait">head portrait</string>
    <string name="chat">聊天</string>
    <string name="contacts">通讯录</string>
    <string name="me">我</string>
    <string name="add_friend">添加好友</string>
    <string name="search1">搜索</string>
    <string name="friendName">TextView</string>
    <string name="friendprofile">friendProfile</string>
    <string name="change">修改密码</string>
    <string name="id4">ID</string>
    <string name="name">昵称</string>
    <string name="profile">profile</string>
    <string name="search">搜索</string>
    <string name="plzid">请输入用户ID</string>
    <string name="head4">head</string>
    <string name="add">add</string>
    <string name="addf">添加好友</string>
    <string name="name1">原昵称</string>
    <string name="name2">新昵称</string>
    <string name="plzname">请输入新昵称</string>
    <string name="change1">确认修改</string>
    <string name="inputOld">请输入旧密码</string>
    <string name="inputNew">请输入新密码</string>
    <string name="inputNew2">请再次输入新密码</string>
    <string name="send3">发送</string>
    <string name="plzinput">请输入...</string>
    <string name="meToOthers">我发送的好友请求</string>
    <string name="othersToMe">别人发送的好友请求</string>
    <string name="image1">image</string>
    <string name="profile1">profile</string>
    <string name="image">image</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="search3">搜索</string>
    <string name="searchResultChinese">用户不存在</string>
    <string name="id3">ID</string>
    <string name="nickname">昵称</string>
    <string name="addfriend">添加好友</string>
    <string name="profile8">profile</string>
    <string name="head">head</string>
    <string name="id">ID</string>
    <string name="name9">昵称</string>
    <string name="sendM">发消息</string>
    <string name="deleteFriend">删除好友</string>
    <string name="left_head">left_head</string>
    <string name="right_head">right_head</string>
    <string name="name11">昵称</string>
    <string name="id99">ID</string>
</resources>